--- a/assets/css/operator-circle.css
+++ b/assets/css/operator-circle.css
@@ -378,7 +378,7 @@
 
   a {
     min-width: 200px;
-    margin-top: 0.5rem !important;
+    margin: 0.5rem 0 0 !important;
   }
 }
 
